# HWCache

./: CMakeLists.txt  README.md
include/: IDL.h  LFU.h  LRU.h  hit_count.h
src/: IDL.hpp  LRU.hpp  Makefile  caches.hpp  e2e.cpp  page.cpp
tests/: 1.in  3.in
tryna_build/: CmakeLists.txt
tryna_build/include/: IDL.h  LFU.h  LRU.h  caches.h  page.h
tryna_build/src/: IDL.hpp  LFU.hpp  page.hpp
tryna_build/tests/: test.in
